--- a/grading.yml
+++ b/grading.yml
@@ -31,15 +31,24 @@ grades:
     sentimental: *fullyauto
     bleep: *fullyauto
 
-    m0: *manual
-    m1: *manual
+    m6: *manual
+    m7: *manual
+    m8: *manual
+    m9: *manual
 
 modules:
-    m0:
+    m6:
         - homepage
-    m1:
+    m7:
         - sentimental
         - bleep
+    m8:
+        - hangman
+    m9:
+        - adventure
+    m10:
+        - similarities
+        - survey
 
 calculation:
     final:
@@ -50,5 +59,7 @@ calculation:
 
 mods:
     submits:
-        m0: 0
-        m1: 1
+        m6: 0
+        m7: 1
+        m8: 1
+        m9: 1
