--- a/schedules.yml
+++ b/schedules.yml
@@ -8,3 +8,19 @@ Parttime:
         "Lecture: Python": /lectures/python
         Implement Sentimental: /problems/sentimental
         Implement Bleep: /problems/bleep
+Test:
+    Module 6:
+        Overview & Grading: /overviews/homepage
+        "Lecture: HTTP, HTML and CSS": /lectures/http
+        Implement Homepage: /problems/homepage
+    Module 7:
+        Overview & Grading: /overviews/python
+        "Lecture: Python": /lectures/python
+        Implement Sentimental: /problems/sentimental
+        Implement Bleep: /problems/bleep
+    Module 8:
+        Overview: /overviews/hangman
+    Module 9:
+        Overview: /overviews/adventure
+    Module 10:
+        Overview: /overviews/web
