--- a/problems/sentimental/submit.yml
+++ b/problems/sentimental/submit.yml
@@ -6,5 +6,5 @@ files:
         - cash.py
         - vigenere.py
 check:
-    tool: check50v2
-    slug: sentimental@minprog/checks
+    tool: check50
+    slug: minprog/cs50x/2019/sentimental
