--- a/problems/similarities-less/submit.yml
+++ b/problems/similarities-less/submit.yml
@@ -4,5 +4,5 @@ files:
         - index.html
         - helpers.py
 check:
-    tool: check50v2
-    slug: similarities/less@minprog/checks
+    tool: check50
+    slug: minprog/cs50x/2019/similarities/less
