--- a/problems/similarities-more/submit.yml
+++ b/problems/similarities-more/submit.yml
@@ -5,5 +5,5 @@ files:
         - index.html
         - matrix.html
 check:
-    tool: check50v2
-    slug: similarities/more@minprog/checks
+    tool: check50
+    slug: minprog/cs50x/2019/similarities/more
