--- a/problems/survey/submit.yml
+++ b/problems/survey/submit.yml
@@ -5,5 +5,5 @@ files:
         - application.py
         - form.html
 check:
-    tool: check50v2
-    slug: survey@minprog/checks
+    tool: check50
+    slug: minprog/cs50x/2019/survey
