--- a/schedules.yml
+++ b/schedules.yml
@@ -1,13 +1,14 @@
 Parttime:
-    Module 6:
+    Module 6 - Homepage:
         Overview & Grading: /overviews/homepage
-        "Lecture: HTTP, HTML and CSS": /lectures/http
-        Implement Homepage: /problems/homepage
-    Module 7:
+    Module 7 - Python:
         Overview & Grading: /overviews/python
-        "Lecture: Python": /lectures/python
-        Implement Sentimental: /problems/sentimental
-        Implement Bleep: /problems/bleep
+    Module 8 - Hangman:
+        Overview & Grading: /overviews/hangman
+    Module 9 - Adventure:
+        Overview & Grading: /overviews/adventure
+    Module 10 - Web:
+        Overview & Grading: /overviews/web
 Test:
     Module 6:
         Overview & Grading: /overviews/homepage
