--- a/schedules.yml
+++ b/schedules.yml
@@ -25,4 +25,8 @@ Test:
         Overview: /overviews/adventure
     Module 10:
         Overview: /overviews/web
-Fulltime: {}
+Fulltime:
+    Module 6 - Homepage:
+        Overview & Grading: /overviews/homepage
+        "Lecture: HTTP": /lectures/http
+        Implement Homepage: /problems/homepage
