--- a/schedules.yml
+++ b/schedules.yml
@@ -9,24 +9,15 @@ Parttime:
         Overview & Grading: /overviews/adventure
     Module 10 - Web:
         Overview & Grading: /overviews/web
-Test:
-    Module 6:
+Fulltime:
+    Preparation:
+        "Lecture: HTTP": /lectures/http
+    Module 6 - Homepage:
         Overview & Grading: /overviews/homepage
-        "Lecture: HTTP, HTML and CSS": /lectures/http
+        "Lecture: HTTP": /lectures/http
         Implement Homepage: /problems/homepage
     Module 7:
         Overview & Grading: /overviews/python
         "Lecture: Python": /lectures/python
         Implement Sentimental: /problems/sentimental
         Implement Bleep: /problems/bleep
-    Module 8:
-        Overview: /overviews/hangman
-    Module 9:
-        Overview: /overviews/adventure
-    Module 10:
-        Overview: /overviews/web
-Fulltime:
-    Module 6 - Homepage:
-        Overview & Grading: /overviews/homepage
-        "Lecture: HTTP": /lectures/http
-        Implement Homepage: /problems/homepage
