--- a/problems/sentimental/submit.yml
+++ b/problems/sentimental/submit.yml
@@ -3,7 +3,7 @@ files:
     required:
         - hello.py
         - mario.py
-        - cash.py
+        - greedy.py
         - vigenere.py
 check:
     tool: check50
