--- a/schedules.yml
+++ b/schedules.yml
@@ -16,7 +16,7 @@ Fulltime:
         Overview & Grading: /overviews/homepage
         "Lecture: HTTP": /lectures/http
         Implement Homepage: /problems/homepage
-    Module 7:
+    Module 7 - Python:
         Overview & Grading: /overviews/python
         "Lecture: Python": /lectures/python
         Implement Sentimental: /problems/sentimental
