--- a/schedules.yml
+++ b/schedules.yml
@@ -19,3 +19,5 @@ Fulltime:
         "Lecture: Python": /lectures/python
         Implement Sentimental: /problems/sentimental
         Implement Bleep: /problems/bleep
+    Module 8 - Hangman:
+        Overview & Grading: /overviews/hangman
