--- a/grading.yml
+++ b/grading.yml
@@ -25,8 +25,8 @@ grades:
     homepage:
         type: pass
         subgrades:
-            correctness: integer
-        calculation: (correctness / 5.0 * 9 + 1).round(1)
+            checked: boolean
+        calculation: checked.to_i
         hide_calculated: true
     sentimental: *fullyauto
     bleep: *fullyauto
