--- a/grading.yml
+++ b/grading.yml
@@ -12,8 +12,9 @@ templates:
         subgrades:
             points: integer
             hacker: integer
-            late: integer
-        calculation: ((points + hacker - late) / 5 * 9 + 1).round(1)
+            late: float
+        calculation: ((points + hacker - late) / 5.0 * 9 + 1).round(1)
+        hide_calculated: true
     4: &test
         type: pass
         subgrades:
