--- a/schedules.yml
+++ b/schedules.yml
@@ -20,7 +20,9 @@ Parttime:
             "Video: Details 1": https://www.youtube.com/watch?v=wYYzteRKU7U
             "Video: Details 2": https://www.youtube.com/watch?v=Umpt43ZzmqM
         Hangman:
-            Implement Hangman: /problems/hangman
+            Implement either of:
+                Lovely Hangman: /problems/hangman2
+                Evil Hangman: /problems/hangman
     Module 9 - Adventure:
         Overview & Grading: /overviews/adventure
     Module 10 - Web:
