--- a/schedules.yml
+++ b/schedules.yml
@@ -25,6 +25,9 @@ Parttime:
                 Evil Hangman: /problems/hangman
     Module 9 - Adventure:
         Overview & Grading: /overviews/adventure
+        Implement either of:
+            Adventure: /problems/adventure-less
+            Adventure (Hacker): /problems/adventure-more
     Module 10 - Web:
         Overview & Grading: /overviews/web
 Fulltime:
@@ -49,4 +52,6 @@ Fulltime:
             "Video: Details 1": https://www.youtube.com/watch?v=wYYzteRKU7U
             "Video: Details 2": https://www.youtube.com/watch?v=Umpt43ZzmqM
         Hangman:
-            Implement Hangman: /problems/hangman
+            Implement either of:
+                Lovely Hangman: /problems/hangman2
+                Evil Hangman: /problems/hangman
