--- a/schedules.yml
+++ b/schedules.yml
@@ -55,3 +55,8 @@ Fulltime:
             Implement either of:
                 Lovely Hangman: /problems/hangman2
                 Evil Hangman: /problems/hangman
+    Module 9 - Adventure:
+        Overview & Grading: /overviews/adventure
+        Implement either of:
+            Adventure: /problems/adventure-less
+            Adventure (Hacker): /problems/adventure-more
