--- a/schedules.yml
+++ b/schedules.yml
@@ -20,12 +20,12 @@ Parttime:
             "Video: Details 1": https://www.youtube.com/watch?v=wYYzteRKU7U
             "Video: Details 2": https://www.youtube.com/watch?v=Umpt43ZzmqM
         Hangman:
-            Implement either of:
+            "Implement either of:":
                 Lovely Hangman: /problems/hangman2
                 Evil Hangman: /problems/hangman
     Module 9 - Adventure:
         Overview & Grading: /overviews/adventure
-        Implement either of:
+        "Implement either of:":
             Adventure: /problems/adventure-less
             Adventure (Hacker): /problems/adventure-more
     Module 10 - Web:
@@ -52,11 +52,11 @@ Fulltime:
             "Video: Details 1": https://www.youtube.com/watch?v=wYYzteRKU7U
             "Video: Details 2": https://www.youtube.com/watch?v=Umpt43ZzmqM
         Hangman:
-            Implement either of:
+            "Implement either of:":
                 Lovely Hangman: /problems/hangman2
                 Evil Hangman: /problems/hangman
     Module 9 - Adventure:
         Overview & Grading: /overviews/adventure
-        Implement either of:
+        "Implement either of:":
             Adventure: /problems/adventure-less
             Adventure (Hacker): /problems/adventure-more
