add web schedule

--- a/schedules.yml
+++ b/schedules.yml
@@ -60,3 +60,5 @@ Fulltime:
         "Implement either of:":
             Adventure: /problems/adventure-less
             Adventure (Hacker): /problems/adventure-more
+    Module 10 - Web:
+        Overview & Grading: /overviews/web
