--- a/grading.yml
+++ b/grading.yml
@@ -20,6 +20,7 @@ templates:
         subgrades:
             passed: integer
         calculation: passed
+        is_test: true
         hide_calculated: true
 
 grades:
